# pilates

./: .gitignore  .goreleaser.yml  Dockerfile  README.md  commands.go  go.mod  go.sum  install.sh  libft.go  libft_test.go  pilates.go  root.go  root_test.go
.github/workflows/: beta.yml  comments.yml  goreleaser.yml  gotests.yml  libft.yml  libftComment.yml  main.yml  release.yml
cmd/pilates/: main.go
internal/: helpers.go  helpers_test.go
libft/: CMakeLists.txt  CMakeLists.txt.in  CMakeLists.txt.test  README.md  gitignore  test_ft_atoi.cpp  test_ft_bzero.cpp  test_ft_calloc.cpp  test_ft_isalnum.cpp  test_ft_isalpha.cpp  test_ft_isascii.cpp  test_ft_isdigit.cpp  test_ft_isprint.cpp  test_ft_itoa.cpp  test_ft_lstadd_back.cpp  test_ft_lstadd_front.cpp  test_ft_lstclear.cpp  test_ft_lstdelone.cpp  test_ft_lstiter.cpp  test_ft_lstlast.cpp  test_ft_lstmap.cpp  test_ft_lstnew.cpp  test_ft_lstsize.cpp  test_ft_memccpy.cpp  test_ft_memchr.cpp  test_ft_memcmp.cpp  test_ft_memcpy.cpp  test_ft_memmove.cpp  test_ft_memset.cpp  test_ft_putchar_fd.cpp  test_ft_putendl_fd.cpp  test_ft_putnbr_fd.cpp  test_ft_putstr_fd.cpp  test_ft_split.cpp  test_ft_strchr.cpp  test_ft_strdup.cpp  test_ft_strjoin.cpp  test_ft_strlcat.cpp  test_ft_strlcpy.cpp  test_ft_strlen.cpp  (+9 more)
testdata/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+5 more)
testdata/xtra/libft/: libft.h
